--- a/q&a/index.html
+++ b/q&a/index.html
@@ -1,1 +1,76 @@
-
+<!-- FAQ 1 - Bootstrap Brain Component -->
+<link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+<section class="bg-light py-3 py-md-5">
+  <div class="container">
+    <div class="row gy-5 gy-lg-0 align-items-lg-center">
+      <div class="col-12 col-lg-6">
+        <img class="img-fluid rounded" loading="lazy" src="./dist/img/q&a.png" alt="How can we help you?">
+      </div>
+      <div class="col-12 col-lg-6">
+        <div class="row justify-content-xl-end">
+          <div class="col-12 col-xl-11">
+            <h2 class="h1 mb-3">Apa yang bisa saya bantu?</h2>
+            <p class="lead fs-4 text-secondary mb-5">saya berharap anda akan mendapatkan jawaban dari pertanyaan yang anda butuhkan disini. Jika anda mebutuhkan bantuan lain, silahkan menghubungi saya lewat email.</p>
+            <div class="accordion accordion-flush" id="accordionExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    Bagaimana cara mengupload praktik baik setelah menerapkan keterampilan mengajar literasi baca tulis? ?
+                  </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <p>Mengisi gform dan mengupload video dari penerapan keterampilan mengajar literasi baca tulis di satuan PAUD masing-masing</p>
+                    <ul>
+                      
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Apakah kami bisa mengetahui skor dari quiz yang sdh dikerjakan?
+                  </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    Ya, setelah menyelesaikan quiz akan ada skor yang telah Anda kerjakan.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Apakah kami dapat menambahkan lagu baru tentang baca tulis?
+                  </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <p>Anda dapat menambahkan lagu tentang baca tulis di bagian praktik baik.</p>
+                    <ul>
+                      
+                    </ul>
+                  </div>
+               			   </div>
+              </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingFour">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                    Apakah kami dapat memberikan saran terhadappenggunaan BASIRU ini?
+                  </button>
+                </h2>
+                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    Ya, melalui nomor wa yang tercantum dimenu CONTACT US
+                  </div>
+                </div>
+			</div>
+          </div>
+        </div>
+      </div>
+    </div>
+	
+  <script src="https://unpkg.com/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </div>
+</section>
