--- a/q&a/index.html
+++ b/q&a/index.html
@@ -318,23 +318,31 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+          <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="./dashboard.html">BASIRU</a>
+                <a class="navbar-brand" href="#page-top">BASIRU</a>
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="./dashboard.html">
-                            <i class="fas fa-home"></i> Home
-                        </a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="./praktik-baik.html">
-                            <i class="fas fa-users"></i> Praktik Baik
-                        </a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="./perpustakaan.html">
-                            <i class="fas fa-book"></i> Perpustakaan
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#carousel-section"><i class="fas fa-images"></i> GALERI</a></li>
+                        <li class="nav-item dropdown mx-0 mx-lg-1">
+                            <a class="nav-link dropdown-toggle py-3 px-0 px-lg-3 rounded" href="#" id="programDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fas fa-graduation-cap"></i> PROGRAM
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="programDropdown">
+                                <li><a class="dropdown-item" href="./praktik-baik.html"><i class="fas fa-users"></i> Praktik Baik</a></li>
+                                <li><a class="dropdown-item" href="./perpustakaan.html"><i class="fas fa-book"></i> Perpustakaan</a></li>
+                                <li><a class="dropdown-item" href="./buku-digital.html"><i class="fas fa-tablet-alt"></i> Buku Digital</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">VIDEO</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#refleksi">QUIZ</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="./q&a">
+                            <i class="fas fa-question-circle"></i> Q & A
                         </a></li>
                     </ul>
                 </div>
