--- a/q&a/index.html
+++ b/q&a/index.html
@@ -333,14 +333,14 @@
                                 <i class="fas fa-graduation-cap"></i> PROGRAM
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="programDropdown">
-                                <li><a class="dropdown-item" href="../praktik-baik.html"><i class="fas fa-users"></i> Praktik Baik</a></li>
-                                <li><a class="dropdown-item" href="../perpustakaan.html"><i class="fas fa-book"></i> Perpustakaan</a></li>
-                                <li><a class="dropdown-item" href="../buku-digital.html"><i class="fas fa-tablet-alt"></i> Buku Digital</a></li>
+                                <li><a class="dropdown-item" href="./praktik-baik.html"><i class="fas fa-users"></i> Praktik Baik</a></li>
+                                <li><a class="dropdown-item" href="./perpustakaan.html"><i class="fas fa-book"></i> Perpustakaan</a></li>
+                                <li><a class="dropdown-item" href="./buku-digital.html"><i class="fas fa-tablet-alt"></i> Buku Digital</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#../about">VIDEO</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#../refleksi">QUIZ</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#../contact">Contact</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">VIDEO</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#refleksi">QUIZ</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="./q&a">
                             
                         </a></li>
