--- a/q&a.html
+++ b/q&a.html
@@ -338,10 +338,10 @@
                                 <li><a class="dropdown-item" href="./buku-digital.html"><i class="fas fa-tablet-alt"></i> Buku Digital</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">VIDEO</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#refleksi">QUIZ</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="./q&a">
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="../#about">VIDEO</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="../#refleksi">QUIZ</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#../contact">Contact</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="q&a.html">
                             
                         </a></li>
                     </ul>
@@ -357,7 +357,7 @@
   <div class="container">
     <div class="row gy-5 gy-lg-0 align-items-lg-center">
       <div class="col-12 col-lg-6">
-        <img class="img-fluid rounded" loading="lazy" src="./dist/img/q&a.png" alt="How can we help you?">
+        <img class="img-fluid rounded" loading="lazy" src="q&a/dist/img/q&a.png" alt="Apa yang bisa saya bantu?">
       </div>
       <div class="col-12 col-lg-6">
         <div class="row justify-content-xl-end">
