--- a/q&a.html
+++ b/q&a.html
@@ -349,7 +349,7 @@
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="masthead text-green text-center" style="background: linear-gradient(rgba(26, 188, 156, 0.8), rgba(22, 160, 133, 0.8)), url('./src/assets/basirubg.jpg'); background-size: cover; background-position: center; background-attachment: fixed;">
+        <header class="masthead text-green text-center" style="background: linear-gradient(rgba(26, 188, 156, 0.8), rgba(22, 160, 133, 0.8)), url('q&a/dist/img/q&a.png'); background-size: cover; background-position: center; background-attachment: fixed;">
             <div class="container d-flex align-items-center flex-column">
                
 <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
