--- a/q&a.html
+++ b/q&a.html
@@ -19,7 +19,7 @@
         <style>
             /* Enhanced dropdown styling */
             .dropdown-menu {
-                background: #000000;
+                background: #2c3e50;
                 border: none;
                 border-radius: 8px;
                 box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
