--- a/kontak.html
+++ b/kontak.html
@@ -551,7 +551,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
+        <div class="body">
             <h1>Get in Touch With Us</h1>
             <p>We'd love to hear from you. Here's how you can reach us.</p>
         </div>
@@ -659,4 +659,5 @@
 </body>
 
 </html>
+
 
