--- a/q&a.html
+++ b/q&a.html
@@ -468,7 +468,7 @@
                     <div class="col-lg-4">
                         <h4 class="text-uppercase mb-4">About BASIRU</h4>
                         <p class="lead mb-0">
-                            BASIRU is a platform dedicated to education and literacy development.
+                            BASIRU, dibuat untuk para praktisi PAUD
                         </p>
                     </div>
                 </div>
