--- a/praktik-baik.html
+++ b/praktik-baik.html
@@ -249,81 +249,23 @@
             </div>
         </header>
 
-        <!-- Portfolio Section-->
-        <section class="page-section portfolio" id="portfolio">
-            <div class="container">
-                <!-- Portfolio Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">PRAKTIK BAIK</h2>
+<!-- About Section Heading-->
+                <h2 class="page-section-heading text-center text-uppercase text-white">Video Pembelajaran</h2>
                 <!-- Icon Divider-->
-                <div class="divider-custom">
+                <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
-                <!-- Portfolio Grid Items-->
-                <div class="row justify-content-center">
-                   <!-- Portfolio Item 1-->
-					<div class="col-md-6 col-lg-4 mb-5">
-						<div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal1">
-							<div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-								<div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-							</div>
-							<img class="img-fluid" src="./dist/assets/img/portfolio/jurnal1.png" alt="..." />
-						</div>
-					</div>
-					<!-- Portfolio Item 2 -->
-					<div class="col-md-6 col-lg-4 mb-5">
-						<div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal2">
-							<div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-								<div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-					  </div><img class="img-fluid" src="./dist/assets/img/portfolio/galeri1.png" alt="..."></div>
-					</div>		
-					<!-- Portfolio Item 3-->
-                    <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal3">
-                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div>
-                            <img class="img-fluid" src="./dist/assets/img/portfolio/circus.png" alt="..." />
-                        </div>
-                    </div>
-					<!-- Portfolio Item 4 -->
-					<div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
-						<div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal4">
-							<div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-								<div class="portfolio-item-caption-content text-center text-white">
-									<i class="fas fa-plus fa-3x"></i>
-								</div>
-							</div>
-							<img class="img-fluid" src="./dist/assets/img/portfolio/game.png" alt="..." />
-						</div>
-					</div>
+        <div class="row mb-3 justify-content-center">
+                    <div class="col-12 text-center">
 
-					<!-- Portfolio Item 5 -->
-					<div class="col-md-6 col-lg-4 mb-5 mb-md-0">
-						<div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal5">
-							<div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-								<div class="portfolio-item-caption-content text-center text-white">
-									<i class="fas fa-plus fa-3x"></i>
-								</div>
-							</div>
-							<img class="img-fluid" src="./dist/assets/img/portfolio/safe.png" alt="..." />
-						</div>
-					</div>
-
-					<!-- Portfolio Item 6 -->
-					<div class="col-md-6 col-lg-4">
-						<div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal6">
-							<div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-								<div class="portfolio-item-caption-content text-center text-white">
-									<i class="fas fa-plus fa-3x"></i>
-								</div>
-							</div>
-							<img class="img-fluid" src="./dist/assets/img/portfolio/submarine.png" alt="Submarine image" />
-						</div>
-					</div>
-				</div>
-			</div>
+                         <iframe width="560" height="315" src="https://www.youtube.com/embed/Jk1DC-l8J4M" title="TK Bintaro" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/k9TaCWwLv2U" title="TK Besuki 2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				
+                <<iframe width="560" height="315" src="https://www.youtube.com/embed/Z5nR7k57A6c" title="TK Besuki1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				  <iframe width="560" height="315" src="https://www.youtube.com/embed/WXd1Q7LD0C4?si=c7BVLeji5rXvM7vD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="margin: 10px;"></iframe>
 		</section>
 
         <!-- Footer-->
