--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h5>
               <!-- Tombol buka modal video -->
               <a href="#" class="text-white text-decoration-none" data-bs-toggle="modal" data-bs-target="#videoModal" data-video=
-			  <iframe width="1801" height="683" src="https://www.youtube.com/embed/0124eoobzpQ" title="Video Tutorial  BASIRU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+			  <iframe width="1801" height="683" src="<iframe width="1801" height="683" src="https://www.youtube.com/embed/0124eoobzpQ" title="Video Tutorial  BASIRU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" title="Video Tutorial  BASIRU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 Video Tutorial
               </a>
             </h5>
@@ -141,3 +141,4 @@
   </script>
 </body>
 </html>
+
