--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <!-- Tombol buka modal video -->
               <a href="#" class="text-white text-decoration-none" data-bs-toggle="modal" data-bs-target="#videoModal" data-video=
 			 https://youtu.be/0124eoobzpQ
-                Video Tutorial
+               <h5> Video Tutorial
               </a>
             </h5>
             <p class="small">Tonton video edukatif untuk pengembangan kompetensi</p>
@@ -141,5 +141,6 @@
   </script>
 </body>
 </html>
+
 
 
