--- a/index.html
+++ b/index.html
@@ -87,14 +87,17 @@
             <i class="fas fa-play-circle fa-3x mb-2"></i>
             <h5>
               <!-- Tombol buka modal video -->
-              <a href="#" class="text-white text-decoration-none" data-bs-toggle="modal" data-bs-target="#videoModal" data-video=
-			 https://youtu.be/0124eoobzpQ
-               <h5> Video Tutorial
-              </a>
-            </h5>
-            <p class="small">Tonton video edukatif untuk pengembangan kompetensi</p>
-          </div>
-        </div>
+            <h5>
+  <a href="#"
+     class="text-white text-decoration-none"
+     data-bs-toggle="modal"
+     data-bs-target="#videoModal"
+     data-video="https://www.youtube.com/embed/0124eoobzpQ">
+     Video Tutorial
+  </a>
+</h5>
+<p class="small">Tonton video edukatif untuk pengembangan kompetensi</p>
+
         <div class="col-md-4 mb-3">
           <div class="feature-item">
             <i class="fas fa-users fa-3x mb-2"></i>
@@ -127,20 +130,20 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     const videoModal = document.getElementById('videoModal');
-    const videoFrame = document.getElementById('videoFrame');
+const videoFrame = document.getElementById('videoFrame');
 
-    videoModal.addEventListener('show.bs.modal', function (event) {
-      const button = event.relatedTarget;
-      const videoUrl = button.getAttribute('data-video');
-      videoFrame.src = videoUrl + "?autoplay=1";
-    });
+videoModal.addEventListener('show.bs.modal', function (event) {
+  const button = event.relatedTarget;
+  const videoUrl = button.getAttribute('data-video');
+  videoFrame.src = videoUrl + "?autoplay=1";
+});
 
-    videoModal.addEventListener('hidden.bs.modal', function () {
-      videoFrame.src = "";
-    });
+videoModal.addEventListener('hidden.bs.modal', function () {
+  videoFrame.src = "";
+});
+
   </script>
 </body>
 </html>
-
 
 
