--- a/index.html
+++ b/index.html
@@ -87,17 +87,40 @@
             <i class="fas fa-play-circle fa-3x mb-2"></i>
             <h5>
               <!-- Tombol buka modal video -->
-            <h5>
-  <a href="#"
-     class="text-white text-decoration-none"
-     data-bs-toggle="modal"
-     data-bs-target="#videoModal"
-     data-video="https://www.youtube.com/embed/0124eoobzpQ">
-     Video Tutorial
-  </a>
-</h5>
-<p class="small">Tonton video edukatif untuk pengembangan kompetensi</p>
+              <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body class="bg-light text-white text-center p-5">
 
+    <!-- Tombol untuk buka modal -->
+  <h5>
+    <a href="#"
+       class="text-white text-decoration-none btn btn-primary"
+       data-bs-toggle="modal"
+       data-bs-target="#videoModal"
+       data-video="https://www.youtube.com/embed/0124eoobzpQ">
+       Video Tutorial
+    </a>
+  </h5>
+
+  <!-- Modal -->
+  <div class="modal fade" id="videoModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content bg-dark">
+        <div class="modal-header border-0">
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body p-0">
+          <div class="ratio ratio-16x9">
+            <iframe id="videoFrame" src="" title="Video Tutorial"
+                    allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+            <p class="small">Tonton video edukatif untuk pengembangan kompetensi</p>
+          </div>
+        </div>
         <div class="col-md-4 mb-3">
           <div class="feature-item">
             <i class="fas fa-users fa-3x mb-2"></i>
@@ -130,18 +153,17 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     const videoModal = document.getElementById('videoModal');
-const videoFrame = document.getElementById('videoFrame');
+    const videoFrame = document.getElementById('videoFrame');
 
-videoModal.addEventListener('show.bs.modal', function (event) {
-  const button = event.relatedTarget;
-  const videoUrl = button.getAttribute('data-video');
-  videoFrame.src = videoUrl + "?autoplay=1";
-});
+    videoModal.addEventListener('show.bs.modal', function (event) {
+      const button = event.relatedTarget;
+      const videoUrl = button.getAttribute('data-video');
+      videoFrame.src = videoUrl + "?autoplay=1";
+    });
 
-videoModal.addEventListener('hidden.bs.modal', function () {
-  videoFrame.src = "";
-});
-
+    videoModal.addEventListener('hidden.bs.modal', function () {
+      videoFrame.src = "";
+    });
   </script>
 </body>
 </html>
