--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <!-- Tombol untuk buka modal -->
   <h5>
     <a href="#"
-       class="text-white text-decoration-none btn btn-primary"
+       class="text-white text-decoration-none btn "
        data-bs-toggle="modal"
        data-bs-target="#videoModal"
        data-video="https://www.youtube.com/embed/0124eoobzpQ">
