--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       align-items: center;
       justify-content: center;
       padding: 20px 0;
-      background: linear-gradient(rgba(26, 188, 156, 0.7), rgba(22, 160, 133, 0.9)), url('https://placehold.co/1200x800/1abc9c/FFFFFF?text=Basiru+Background') center/cover fixed !important;
+      background: linear-gradient(rgba(26, 188, 156, 0.7), rgba(22, 160, 133, 0.9)), url('./src/assets/basirubg.jpg') center/cover fixed !important;
     }
     
     .masthead .container {
@@ -203,7 +203,7 @@
     <div class="container d-flex align-items-center flex-column">
 
       <!-- Logo -->
-      <img class="masthead-avatar mb-4" src="https://placehold.co/200x200/1abc9c/FFFFFF?text=B" alt="BASIRU Logo" />
+      <img class="masthead-avatar mb-3" src="./dist/assets/img/logobasiru.png" alt="BASIRU Logo" />
       <!-- Heading -->
       <h1 class="masthead-heading text-uppercase mb-0">BASIRU</h1>
       <!-- Divider -->
@@ -307,3 +307,4 @@
   </script>
 </body>
 </html>
+
