--- a/dashboard.html
+++ b/dashboard.html
@@ -352,7 +352,7 @@
         <header class="masthead text-white text-center" style="background: linear-gradient(rgba(26, 188, 156, 0.8), rgba(22, 160, 133, 0.8)), url('./src/assets/basirubg.jpg'); background-size: cover; background-position: center; background-attachment: fixed;">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="./dist/assets/img/logobasiru.png" alt="..." />
+                <img class="masthead-avatar mb-5" src="./dist/assets/img/kembar.png" alt="..." />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0" style="text-shadow: 2px 2px 4px rgba(0,0,0,0.5);">BASIRU </h1>
                 <!-- Icon Divider-->
